Fixed Blob constructor error